Layout fixes for workflows: * center back button arrow * text color of active nav tab not white * results tab alignment

--- a/tethysext/atcore/public/css/nav_tabs.css
+++ b/tethysext/atcore/public/css/nav_tabs.css
@@ -5,7 +5,8 @@
     height: auto;
 }
 
-#app-content-wrapper #app-content #app-navigation div .nav li a {
+#app-content-wrapper #app-content #app-navigation div .nav li a,
+#app-content-wrapper #app-content #app-navigation div .nav li a.active {
     color: #666666!important;
     background-color: transparent!important;
 }
